--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -8,6 +8,7 @@ autopep8==2.0.2
 cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.3
 deprecation==2.1.0
 frozenlist==1.3.3
 grpcio==1.56.0
@@ -20,6 +21,7 @@ numpy==1.25.0
 packaging==23.1
 pandas==2.0.2
 protobuf==4.23.3
+pur==7.1.0
 pycodestyle==2.10.0
 pydantic==1.10.9
 python-dateutil==2.8.2
@@ -28,9 +30,11 @@ pytz==2023.3
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
+termcolor==2.3.0
 tinkoff==0.1.1
 tinkoff-investments==0.2.0b58
 typing_extensions==4.6.3
 tzdata==2023.3
+upgrade-requirements==1.7.0
 urllib3==2.0.3
 yarl==1.9.2
